--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </menu>
     <img onclick="menu_botao()" id="botao_menu" src="img/menu (botao).png" alt="MENU">
     <header id="Home">
-        <img src="img/logo_jornal_pc.png" alt="Jornal do Futuro">
+        <img style="z-index: 1;" src="img/logo_jornal_pc.png" alt="Jornal do Futuro">
+        <video id="video_inicio" src="img/video_inicio.mp4" autoplay mute loop></video>
     </header>
     <div id="posts">
         <h3 style="margin-left: 100px;">AS NOSSAS NOTÍCIAS</h3>
