videos_align_atualization

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li onclick="menu_botao()"><a href="index.html#explicacao">Sobre o "Jornal do Futuro"</a></li>
             <li onclick="menu_botao()"><a href="index.html#escola">Sobre a ESP</a></li>
         </ul>
-        <video src="img/fundo_menu.mp4" autoplay loop mute no-controls></video>
+        <video src="img/fundo_menu.mp4" preload="auto" autoplay loop mute no-controls></video>
     </menu>
     <img onclick="menu_botao()" id="botao_menu" src="img/menu (botao).png" alt="MENU">
     <header id="Home">
@@ -28,7 +28,7 @@
         <video id="video_inicio" src="img/video_inicio.mp4" autoplay mute loop></video>
     </header>
     <div id="posts">
-        <h3 style="margin-left: 100px;">AS NOSSAS NOTÍCIAS</h3>
+        <h3 style="text-align: center;">AS NOSSAS NOTÍCIAS</h3>
         <table id="noticias">
             <thead>
                 <tr>
