--- a/artigos/artigo1/artigo1.html
+++ b/artigos/artigo1/artigo1.html
@@ -23,7 +23,7 @@
         <video src="../../img/fundo_menu.mp4" autoplay loop mute no-controls></video>
     </menu>
     <img onclick="menu_botao()" id="botao_menu" src="../../img/menu (botao).png" alt="MENU">
-    <header style="height: 400px; overflow: hidden;" id="Home">
+    <header style="overflow: hidden;" id="Home">
         <a href="../../index.html"><img src="../../img/logo_jornal_pc.png" alt="Jornal do Futuro"></a>
     </header>
     <p id="data">Data da publicação: <br> 06-05-2022</p>
@@ -39,7 +39,7 @@
         </p>
         <p>Este projeto financiado pelo estado português, pelo mecanismo de financiamento conjunto do CCAC (Comunidade de Combate às Alterações Climáticas) e pela UE tem como objetivo minimizar a crise energética mundial, que se iniciou oficialmente, de acordo com a AIE (Agência Internacional da Energia), em 2040, e permitir tirar proveito dos vulcões, até agora utilizados apenas para produzir eletricidade a partir da energia geotérmica, muito pouco eficiente para os padrões atuais.
         </p>
-        <p>O novo método apresentado tem por fim tirar proveito da energia libertada pelos vulcões. Os cientistas planeiam criar uma plataforma “descartável”, barata, ecológica e facilmente instalável, que aproveitará a energia térmica e cinética do fumo libertado pelos vulcões ou da lava, dependendo das circunstâncias em que a erupção acontece.</p>
+        <p>O novo método apresentado tem por fim tirar proveito da energia libertada pelos vulcões. Os cientistas planeiam criar uma plataforma “descartável” e que seja barata, ecológica e facilmente instalável e que aproveitará a energia térmica e cinética do fumo libertado pelos vulcões ou da lava, dependendo das circunstâncias em que a erupção acontece.</p>
         <figure class="fig_centro"> <img src="imagem 2.png" alt=""> <figcaption>Vulcão em erupção.</figcaption></figure>
         <p>Quando acontecem erupções vulcânicas do tipo efusivo, ou seja, quando a lava escorre através do cone do vulcão será possível capturar energia através da lava. Caso a erupção seja classificada como mista, poderemos tirar proveito do fumo libertado, esta classificação constitui uma erupção com características de uma erupção efusiva, mas, ao mesmo tempo apresenta libertação de grandes quantidades de fumo.
         </p>
@@ -51,7 +51,7 @@
         </p>
         <p>As catástrofes, tais como a poluição, a desflorestação, os incêndios, as invasões biológicas ou as erupções vulcânicas põem em risco a biodiversidade, pois apresentam uma destruição dos habitats ou a infestação dos mesmos com espécies que absorvem recursos e não permitem a sobrevivência das espécies autóctones.
         </p>
-        <p>A poluição aumenta a quantidade de substâncias tóxicas nos ecossistemas, originando a morte de alguns seres vivos e é um fator que tem vindo a apresentar fortes melhorias desde a década de 20. A desflorestação e as erupções vulcânicas acabam por, para além de matar espécies diretamente, modificar de forma completa um determinado habitat, não permitindo que as espécies que aí habitavam continuarem a utilizar o habitat, causando um exício. As invasões biológicas constituem a inserção, voluntária ou involuntária de espécies não locais num determinado ecossistema, trazendo desafios às espécies locais, fazendo padecer alguns exemplares.
+        <p>A poluição aumenta a quantidade de substâncias tóxicas nos ecossistemas, originando a morte de alguns seres vivos e é um fator que tem vindo a apresentar fortes melhorias desde a década de 20 do século passado. A desflorestação e as erupções vulcânicas acabam por, para além de matar espécies diretamente, modificar de forma completa um determinado habitat, não permitindo que as espécies que aí habitavam continuarem a utilizar o habitat, causando um exício. As invasões biológicas constituem a inserção, voluntária ou involuntária de espécies não locais num determinado ecossistema, trazendo desafios às espécies locais, fazendo padecer alguns exemplares.
         </p>
         <p>Estes cientistas, para além de produzirem energia, estão a planear implementar sistemas de proteção da biodiversidade no seu projeto. Para além de garantirem que a estrutura será fabricada com materiais e métodos completamente responsáveis, dizem também ter em estudo uma forma de diminuir a distância percorrida pela lava e diminuir o nível de intensidade sonora do som emitido pelo sistema durante o seu funcionamento, para permitir uma vida natural normal durante a erupção a partir de uma distância de poucos metros do cone vulcânico, sem riscos nem alterações.
         </p>
@@ -59,24 +59,24 @@
         </p>
         <p>Até este momento os cientistas não divulgaram uma data para a primeira aplicação comercial do projeto, mas prometem já ter parcerias com o governo japonês, um país com uma quantidade significativa de vulcões, para começar a aplicar e produzir em larga escala a tecnologia num curto espaço de tempo.
         </p>
-        <p>Os cientistas estimam um rendimento energético nunca antes visto em produções sem recurso a atividade nuclear, com um rendimento energético capaz de alimentar a cidade do Dubai durante 2 meses, com energia produzida em apenas 7 horas num único vulcão.
+        <p>Os cientistas estimam um rendimento energético nunca antes visto em produções sem recurso a atividade nuclear, com um rendimento energético capaz de alimentar a cidade do Dubai durante meses, com energia produzida em apenas 7 horas num único vulcão.
         </p>
     </article>
     <article class="footer" style="margin-top: 50px;">
         <div class="left">
         <h5>Autores:</h5>
             <ul>
-                <li>Miguel Silva, nº26, 8ºC</li>
-                <li>Mariana Sousa, nº24, 8ºC</li>
-                <li>Rodrigo Medeiros, nº28, 8ºC</li>
+                <li>Cristovão Carneiro, nº29, 8ºC</li>
                 <li>Francisco Moreira, nº14 8ºC</li>
-                <li>Cristovão ***, nº29, 8ºC</li>
+                <li>Mariana Sousa, nº24, 8ºC</li>
+                <li>Miguel Silva, nº26, 8ºC</li>
+                <li>Rodrigo Medeiros, nº28, 8ºC</li>
             </ul>
         </div>
         <div class="right">
             <h5>Fontes</h5>
             <ul>
-                <li>Livro "Ciência & Vida 8º Ano" (Areal Editores)</li>
+                <li>Livro "Ciência & Vida 8" (ASA)</li>
             </ul>
         </div>
         <img src="../../img/logo.png" alt="" style="width: 50vw; display: block; margin: auto;">
@@ -86,6 +86,6 @@
         <p style="text-align: center; margin-bottom: 2px; font-size: 12pt;">"Jornal do Futuro" by ESPenafiel</p>
     </footer>
 
-    <script src="../../menu.js"></script>
+    <script src="../../script.js"></script>
 </body>
 </html>
