--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/menu.css">
     <title>Jornal do Futuro</title>
+    <style>
+        body{
+            overflow-y: hidden;
+        }
+    </style>
 </head>
-<body onload="clicar()">
+<div  class="popup" style="height: 100vh; width: 100vw; background-color: rgba(255, 255, 255, 0.5); position: fixed; transition: 1s ease;">
+    <div style="width: 300px; height: 300px; border-radius: 50px; text-align: centre; background-color: yellow; display: block; margin: auto;">
+        <p style="padding-top: 10px; text-align: center; color: black; font-size: 20pt;">Esta página tem propósitos educativos.</p>
+        <p style="text-align: center; color: black; font-size: 20pt;">A informação apresentada  não corresponde a factos reais.</p>
+        <button onclick="fechar()" style="background-color: red; width: 100px; height: 50px; border-radius: 25px; border: none; display: block; margin: auto; margin-bottom: 5px; text-decoration: underline;">FECHAR</button>
+    </div>
+</div>
+
+<body>
     <menu id="menu">
         <a href="index.html#Home"> <img onclick="menu_botao()" id="home_menu" src="img/home(menu).png" alt="HOME"> </a>
         <img onclick="menu_botao()" id="fechar_menu" src="img/fechar(menu).png" alt="FECHAR">
@@ -20,10 +33,10 @@
             <li onclick="menu_botao()"><a href="index.html#explicacao">Sobre o "Jornal do Futuro"</a></li>
             <li onclick="menu_botao()"><a href="index.html#escola">Sobre a ESP</a></li>
         </ul>
-        <video src="img/fundo_menu.mp4" preload="auto" autoplay loop mute no-controls></video>
+        <video src="img/fundo_menu.mp4" autoplay loop mute no-controls></video>
     </menu>
     <img onclick="menu_botao()" id="botao_menu" src="img/menu (botao).png" alt="MENU">
-    <header id="Home">
+    <header  onload="clicar()" id="Home">
         <img style="z-index: 1;" src="img/logo_jornal_pc.png" alt="Jornal do Futuro">
         <video id="video_inicio" src="img/video_inicio.mp4" autoplay mute loop></video>
     </header>
@@ -32,77 +45,16 @@
         <table id="noticias">
             <thead>
                 <tr>
-                    <th><a href="artigos/artigo1/artigo1.html"><figure><img src="artigos/artigo1/foto1_capa.png"> <figcaption style=" margin-top: 10px;"> <h4>Cientistas portugueses apresentam método inovador para produzir eletricidade.</h4></figcaption> <figcaption><p>Dois cientistas portugueses da Universidade do Porto apresentaram na última semana, numa exposição exibida em Londres, um novo método de produzir energia elétrica a partir de erupções vulcânicas, de uma forma económica.</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
+                    <th><a href="artigos/artigo1/artigo1.html"><figure><img src="artigos/artigo1/foto1_capa.png"> <figcaption style=" margin-top: 10px;"> <h4>Cientistas portugueses apresentam método inovador para produzir eletricidade.</h4></figcaption></figure></a> </th>
+                    <th style="display: none;"><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> </figure></a> </th>
                 </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-                <tr>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                    <th><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> <figcaption><p>Lead</p></figcaption> </figure></a> </th>
-                </tr>
-
             </thead>
         </table>
     </div>
     <article id="explicacao">
         <h3 style="margin-top: 50px;">O que é o "Jornal do Futuro"</h3>
-        <p>O "Jornal do Futuro" é um trabalho realizado por alunos do 8º ano da <a href="http://www.espenafiel.org" target="_blank" rel="noopener noreferrer">Escola Secundária de Penafiel</a> no âmbito da DAC (Domínio da Autonomia Corricular).</p>
-        <p>A proposta para os alunos era exatamente escrever textos jornalísticos com o tema "Jornal do Futuro - Como será a Terra em 2200?". Esta págino surge com o intuito de dar a conhecer o trabalho dos alunos à comunidade.</p>
+        <p>O "Jornal do Futuro" é um trabalho realizado por alunos do 8º ano da <a href="http://www.espenafiel.org" target="_blank" rel="noopener noreferrer">Escola Secundária de Penafiel</a> no âmbito da DAC (Domínio da Autonomia Curricular).</p>
+        <p>A proposta para os alunos era exatamente escrever textos jornalísticos com o tema "Jornal do Futuro - Como será a Terra em 2200?". Esta página surge com o intuito de dar a conhecer o trabalho dos alunos à comunidade.</p>
     </article>
     <article id="escola">
         <h3>A Escola Secundária de <br> Penafiel</h3>
@@ -116,12 +68,6 @@
         <p style="text-align: center; margin-bottom: 2px; font-size: 12pt;">"Jornal do Futuro" by ESPenafiel</p>
     </footer>
 
-    <script src="menu.js"></script>
+    <script src="script.js"></script>
 </body>
-
-<script>
-    function clicar(){
-        document.querySelector("home_menu").click()
-    }
-</script>
 </html>
