--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </style>
 </head>
-<div  class="popup" style="height: 100vh; width: 100vw; background-color: rgba(255, 255, 255, 0.5); position: fixed; transition: .7s ease-in-out; opacity: 0; display: block; z-index: 2;">
+<div  class="popup" style="height: 100vh; width: 100vw; background-color: rgba(255, 255, 255, 0.5); position: fixed; transition: .7s ease-in-out; opacity: 0; display: none; z-index: 2;">
     <div style="width: 300px; height: 300px; border-radius: 50px; text-align: centre; background-color: yellow; display: block; margin: auto;">
         <p style="padding-top: 10px; text-align: center; color: black; font-size: 20pt;">Esta página tem propósitos educativos.</p>
         <p style="text-align: center; color: black; font-size: 20pt;">A informação apresentada  não corresponde a factos reais.</p>
@@ -46,8 +46,21 @@
         <table id="noticias">
             <thead>
                 <tr>
-                    <th><a href="artigos/artigo1/artigo1.html"><figure><img src="artigos/artigo1/foto1_capa.png"> <figcaption style=" margin-top: 10px;"> <h4>Cientistas portugueses apresentam método inovador para produzir eletricidade.</h4></figcaption></figure></a> </th>
-                    <th style="display: none;"><a href="artigos/artigo_model.html"><figure><img src="img/quadrado.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Título da Notícia</h4></figcaption> </figure></a> </th>
+                    <th><a href="artigos/artigo1/artigo.html"><figure><img src="artigos/artigo1/foto1_capa.png"> <figcaption style=" margin-top: 10px;"> <h4>Cientistas portugueses apresentam método inovador para produzir eletricidade.</h4></figcaption></figure></a> </th>
+                    <th><a href="artigos/artigo2/artigo.html"><figure><img src="artigos/artigo2/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Catástrofes: A sua evolução.</h4></figcaption></figure></a> </th>
+                </tr>
+            </thead>
+            <thead>
+                <tr>
+                    <th><a href="artigos/artigo3/artigo.html"><figure><img src="artigos/artigo3/imagem_capa.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Maior floresta acaba de ser abatida e os níveis do mar sobem drasticamente</h4></figcaption></figure></a> </th>
+                    <th><a href="artigos/artigo4/artigo.html"><figure><img src="artigos/artigo4/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Nem todas as batalhas são as que vemos</h4></figcaption></figure></a> </th>
+                </tr>
+                <tr>
+                    <th><a href="artigos/artigo5/artigo.html"><figure><img src="artigos/artigo5/imagem_capa.jpeg"> <figcaption style=" margin-top: 10px;"> <h4>Invasão dos Tubacórnios no Canadá.</h4></figcaption></figure></a> </th>
+                    <th><a href="artigos/artigo6/artigo.html"><figure><img src="artigos/artigo6/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Entrevista a um Analista de Comunicação de Máquinas</h4></figcaption></figure></a> </th>
+                </tr>
+                <tr>
+                    <th><a href="artigos/artigo7/artigo.html"><figure><img src="artigos/artigo7/imagem_capa.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Foram encontrados artefactos históricos.</h4></figcaption></figure></a> </th>
                 </tr>
             </thead>
         </table>
@@ -60,7 +73,7 @@
     <article id="escola">
         <h3>A Escola Secundária de <br> Penafiel</h3>
         <p>A Escola Secundária de Penafiel é uma instituição de ensino em Penafiel, lecionando a alunos do 3º Ciclo e Secundário. A nossa escola tem uma página Web onde é possível aceder a mais informações e novidades da escola.</p>
-        <img src="img/logo.png">
+        <img src="img/logo.png" style="background-color: rgba(255, 255, 255, 0.527); border-radius: 30px;">
         <p style="text-align: center;">A página da escola tem como endereço: <a href="http://www.espenafiel.org" target="_blank" rel="noopener noreferrer">www.espenafiel.org</a>.</p>
     </article>
     <img id="fundo_outros" src="img/planeta_fundo.png" alt="">
