alteracoes_1 + batao_limpar

--- a/artigos/artigo6/artigo.html
+++ b/artigos/artigo6/artigo.html
@@ -31,7 +31,7 @@
     <p id="data">Data da publicação: <br> 06-05-2022</p>
     <article class="noticia">
         <h3 style="margin-top: 15px;">Entrevista a um Analista de Comunicação de Máquinas</h3>
-        <figure ><img id="pricipal" src="imagem1.jpeg" alt=""> <figcaption style="text-align: center;">Imagem de um Tubacórnio</figcaption></figure>
+        <figure ><img id="pricipal" src="imagem1.jpeg" alt=""> <figcaption style="text-align: center;">Profissional a analisar código</figcaption></figure>
         <p>Nas últimas décadas, temos assistido a uma profunda transformação tecnológica que nos tem trazido novas formas de encarar o mundo do trabalho, com aumentos significativos tanto de produtividade, como de fiabilidade, o que tem levado ao crescimento das economias e, sobretudo a uma melhoria da qualidade de vida. Contudo, devemos perguntar-nos até que ponto a espécie humana não estará a criar máquinas que, num futuro, não serão responsáveis pela sua própria aniquilação? Como funciona a comunicação entre homens e máquinas?</p>
         <p>Para nos responder a estas e outras questões temos connosco Jacinto Apolinário, analista de comunicação com máquinas.</p>
         <br>
