--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <li onclick="menu_botao()"><a href="index.html#escola">Sobre a ESP</a></li>
         </ul>
         <video src="img/fundo_menu.mp4" autoplay loop mute no-controls></video>
+        <button onclick="clean()" class="limpar">
+            <p class="limpa" style="vertical-align: centre; transition: 1s;" >Limpar Memória Local</p>
+            <p class="certo" style="vertical-align: centre; opacity: 0; transition: 1s;" >&#10004;</p>
+        </button>
     </menu>
     <img onclick="menu_botao()" id="botao_menu" src="img/menu (botao).png" alt="MENU">
     <header  onload="clicar()" id="Home">
