alteracoes2 + artigo:hover

--- a/index.html
+++ b/index.html
@@ -50,21 +50,22 @@
         <table id="noticias">
             <thead>
                 <tr>
-                    <th><a href="artigos/artigo1/artigo.html"><figure><img src="artigos/artigo1/foto1_capa.png"> <figcaption style=" margin-top: 10px;"> <h4>Cientistas portugueses apresentam método inovador para produzir eletricidade.</h4></figcaption></figure></a> </th>
-                    <th><a href="artigos/artigo2/artigo.html"><figure><img src="artigos/artigo2/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Catástrofes: A sua evolução.</h4></figcaption></figure></a> </th>
+                    <th> <div class="th"><a href="artigos/artigo1/artigo.html"><figure><img src="artigos/artigo1/foto1_capa.png"> <figcaption style=" margin-top: 10px;"> <h4>Cientistas portugueses apresentam método inovador para produzir eletricidade.</h4></figcaption></figure></a> </div> </th>
+                    <th> <div class="th"><a href="artigos/artigo2/artigo.html"><figure><img src="artigos/artigo2/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Catástrofes: A sua evolução.</h4></figcaption></figure></a> </div> </th>
                 </tr>
             </thead>
             <thead>
                 <tr>
-                    <th><a href="artigos/artigo3/artigo.html"><figure><img src="artigos/artigo3/imagem_capa.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Maior floresta acaba de ser abatida e os níveis do mar sobem drasticamente</h4></figcaption></figure></a> </th>
-                    <th><a href="artigos/artigo4/artigo.html"><figure><img src="artigos/artigo4/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Nem todas as batalhas são as que vemos</h4></figcaption></figure></a> </th>
+                    <th> <div class="th"><a href="artigos/artigo3/artigo.html"><figure><img src="artigos/artigo3/imagem_capa.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Maior floresta acaba de ser abatida e os níveis do mar sobem drasticamente</h4></figcaption></figure></a> </div></th>
+                    <th> <div class="th"><a href="artigos/artigo4/artigo.html"><figure><img src="artigos/artigo4/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Nem todas as batalhas são as que vemos</h4></figcaption></figure></a> </div></th>
                 </tr>
                 <tr>
-                    <th><a href="artigos/artigo5/artigo.html"><figure><img src="artigos/artigo5/imagem_capa.jpeg"> <figcaption style=" margin-top: 10px;"> <h4>Invasão dos Tubacórnios no Canadá.</h4></figcaption></figure></a> </th>
-                    <th><a href="artigos/artigo6/artigo.html"><figure><img src="artigos/artigo6/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Entrevista a um Analista de Comunicação de Máquinas</h4></figcaption></figure></a> </th>
+                    <th> <div class="th"><a href="artigos/artigo5/artigo.html"><figure><img src="artigos/artigo5/imagem_capa.jpeg"> <figcaption style=" margin-top: 10px;"> <h4>Invasão dos Tubacórnios no Canadá.</h4></figcaption></figure></a> </div></th>
+                    <th> <div class="th"><a href="artigos/artigo6/artigo.html"><figure><img src="artigos/artigo6/imagem_capa.jpeg"> <figcaption style="margin-top: 10px;"> <h4>Entrevista a um Analista de Comunicação de Máquinas</h4></figcaption></figure></a> </div></th>
                 </tr>
                 <tr>
-                    <th><a href="artigos/artigo7/artigo.html"><figure><img src="artigos/artigo7/imagem_capa.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Foram encontrados artefactos históricos.</h4></figcaption></figure></a> </th>
+                    <th> <div class="th"><a href="artigos/artigo7/artigo.html"><figure><img src="artigos/artigo7/imagem_capa.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Foram encontrados artefactos históricos.</h4></figcaption></figure></a> </th>
+                    <th> <div class="th"><a href="artigos/artigo8/artigo.html"><figure><img src="artigos/artigo8/imagem_capa.jpg"> <figcaption style=" margin-top: 10px;"> <h4>Terra nos dias de hoje.</h4></figcaption></figure></a> </div></th>
                 </tr>
             </thead>
         </table>
